@@ -1,5 +1,7 @@
 
 6.13  2015-06-26
+  - Improved subscribers method in Mojo::EventEmitter to allow subscribers to be
+    modified more easily.
 
 6.12  2015-06-18
   - Welcome to the Mojolicious core team Dan Book.
